added haustiere link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </head>
   <body>
     <h1>go outside!</h1>
+    
+    <ul>
+      <li><a href="https://olivermeier.github.io/haustiereBORG">Haustiere</a></li>
+    </ul>
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
