--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <script id="websites-template" type="text/x-handlebars-template">                                                                    
       <ul>
-        {{#each}}
+        {{#each this}}
         <li><a href="{{url}}">{{description}}</a></li>
         {{/each}}
       </ul>
