--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script id="websites-template" type="text/x-handlebars-template">                                                                    
       <ul>
         {{#each websites}}
-        <li><a href="{{url}}">{{description}}</a></li>
+        <li class="btn btn-lg btn-success"><a href="{{url}}">{{description}}</a></li>
         {{/each}}
       </ul>
     </script>
