--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       var content = 
       {
         websites :[
-          { description: "Tiere", url:"https://olivermeier.github.io/haustiereBORG"},        
+          { description: "Tiere", url:"https://olivermeier.github.io/haustiereBORG" },  
+          { description: "Spiele", url:"https://sandrolipisl24.github.io/Videospielwebseite1-Borg/" },  
         ]
       };
       
