--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="websites">
     </div>
 
-    <div class="container">
+    <!--<div class="container">
       <div class="row">
         <div class="col-lg-4">
           <h1>☄</h1>
@@ -25,7 +25,7 @@
           <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
         </div>
       </div>
-    </div>
+    </div>-->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
