--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="row">
         {{#each websites}}
           <div class="col-lg-4">
-            <h1>☄</h1>
+            <h1>{{icon}}</h1>
             <h2>{{description}}</h2>
             <p><a class="btn btn-secondary" href="{{url}}" role="button">View details »</a></p>
           </div>          
@@ -53,7 +53,7 @@
       var content = 
       {
         websites :[
-          { description: "Tiere", url:"https://olivermeier.github.io/haustiereBORG" },  
+          { description: "Tiere", icon: "😸", url:"https://olivermeier.github.io/haustiereBORG" },  
           { description: "Spiele", url:"https://sandrolipisl24.github.io/Videospielwebseite1-Borg/" },  
           { description: "BORG", url:"https://borg.at" },  
         ]
