--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       {
         websites :[
           { description: "Tiere", icon: "😸", url:"https://olivermeier.github.io/haustiereBORG" },  
-          { description: "Spiele", url:"https://sandrolipisl24.github.io/Videospielwebseite1-Borg/" },  
-          { description: "BORG", url:"https://borg.at" },  
+          { description: "Spiele", icon: "🎮", url:"https://sandrolipisl24.github.io/Videospielwebseite1-Borg/" },  
+          { description: "BORG", icon: "🏫", url:"https://borg.at" },  
         ]
       };
       
