--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           { description: "Tiere", icon: "😸", url:"https://olivermeier.github.io/haustiereBORG" },  
           { description: "Spiele", icon: "🎮", url:"https://sandrolipisl24.github.io/Videospielwebseite1-Borg/" },  
           { description: "BORG", icon: "🏫", url:"https://borg.at" },  
+          { description: "Pizza", icon: "🍕", url:"https://julialerchenmueller.github.io/RestaurantBORG/" },
+          { description: "Bälle", icon: "⚽", url:"https://zauberermerlin777.github.io/kauft-unsere-B-lle-Borg-Egg/" },
+          
         ]
       };
       
