--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           { description: "BORG", icon: "🏫", url:"https://borg.at" },  
           { description: "Pizza", icon: "🍕", url:"https://julialerchenmueller.github.io/RestaurantBORG/" },
           { description: "Bälle", icon: "⚽", url:"https://zauberermerlin777.github.io/kauft-unsere-B-lle-Borg-Egg/" },
+          { description: "Fitness", icon: "💪", url:"https://maxsieberrr.github.io/Borgidorgieggiwebi/" },
           
         ]
       };
