--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           { description: "Pizza", icon: "🍕", url:"https://julialerchenmueller.github.io/RestaurantBORG/" },
           { description: "Bälle", icon: "⚽", url:"https://zauberermerlin777.github.io/kauft-unsere-B-lle-Borg-Egg/" },
           { description: "Fitness", icon: "💪", url:"https://maxsieberrr.github.io/Borgidorgieggiwebi/" },
+          { description: "EU", icon: "🇪🇺", url:"https://maxsieberrr.github.io/Borgidorgieggiwebi/" },
           
         ]
       };
