--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         {{#each snapProjects}}
           <li>            
             <h2>{{topic}}</h2>
+            {{#each team}}
+            <p><em>{{this}}</em></p>
+            {{/each}}
             <p><a class="btn btn-secondary" href="{{url}}" role="button">View details »</a></p>
           </li>          
         {{/each}}
