--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
         {{#each snapProjects}}
           <li>            
             <h2>{{topic}}</h2>
+            <p>
             {{#each team}}
-            <p><em>{{this}}</em></p>
+            <em>{{this}}</em><br/>
             {{/each}}
+            </p>
             <p><a class="btn btn-secondary" href="{{url}}" role="button">View details »</a></p>
           </li>          
         {{/each}}
