--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
             <em>{{this}}</em><br/>
             {{/each}}
             </p>
-            <p><a class="btn btn-secondary" href="{{url}}" role="button">View details »</a></p>
+            <p>
+              <a class="btn btn-success" href="{{url}}" role="button">Go to project »</a>
+              <a class="btn btn-secondary" href="{{documentation}}" role="button">View documentation »</a>
+              <a class="btn btn-info" href="{{trello}}" role="button">Trello »</a>
+            </p>
           </li>          
         {{/each}}
         </ul>
@@ -82,6 +86,8 @@
           { 
             team: ["Michelle Nussbaumer", "Valentin Paluselli"],
             topic: "Click and Point",
+            trello: "http://trello.com",
+            documentation: "http://drive.google.com",
             url: "http://snap.berkeley.edu"
           }
           ]
