--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <ul>
         {{#each snapProjects}}
           <li>            
-            <h2>{{topic}}</h2>
-            <p>
+            <h2 class="col-4">{{topic}}</h2>
+            <p class="col-8">
             {{#each team}}
             <em>{{this}}</em><br/>
             {{/each}}
