--- a/index.html
+++ b/index.html
@@ -91,6 +91,41 @@
             trello: "http://trello.com",
             documentation: "http://drive.google.com",
             url: "http://snap.berkeley.edu"
+          },
+          { 
+            team: ["Julia Lerchenmüller", "Lukas Moosbrugger"],
+            topic: "Snake",
+            trello: "http://trello.com",
+            documentation: "http://drive.google.com",
+            url: "http://snap.berkeley.edu"
+          },
+          { 
+            team: ["Maximilian Sieber"],
+            topic: "Falling Fruits",
+            trello: "http://trello.com",
+            documentation: "http://drive.google.com",
+            url: "http://snap.berkeley.edu"
+          },
+          { 
+            team: ["Luca Lutz", "Sandro Lipburger"],
+            topic: "ojojoj",
+            trello: "http://trello.com",
+            documentation: "http://drive.google.com",
+            url: "http://snap.berkeley.edu"
+          },
+          { 
+            team: ["Valentin Rüscher", "Oliver Meier"],
+            topic: "Iss das!",
+            trello: "http://trello.com",
+            documentation: "http://drive.google.com",
+            url: "http://snap.berkeley.edu"
+          },
+          { 
+            team: ["Merlin Mörth", "Emanuel Moosbrugger"],
+            topic: "ojojoj",
+            trello: "http://trello.com",
+            documentation: "http://drive.google.com",
+            url: "http://snap.berkeley.edu"
           }
           ]
         
