--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           },
           { 
             team: ["Julia Lerchenmüller", "Lukas Moosbrugger"],
-            topic: "Snake",
+            topic: "Sneaky Snake",
             trello: "http://trello.com",
             documentation: "https://docs.google.com/document/d/1Z62E2T8bdehSUyoMRQd4jYDJwquRUDcTgFdqS8A6z4g/edit?usp=sharing",
             url: "http://snap.berkeley.edu"
