--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
             team: ["Maximilian Sieber"],
             topic: "Falling Fruits",
             trello: "http://trello.com",
-            documentation: "http://drive.google.com",
+            documentation: "https://docs.google.com/document/d/1fHaHzJkLx6NnZJI1i9r6mqq_pVeh4n6t_maqjKwYmuw/edit?usp=sharing",
             url: "http://snap.berkeley.edu"
           },
           { 
             team: ["Luca Lutz", "Sandro Lipburger"],
             topic: "ojojoj",
-            trello: "http://trello.com",
+            trello: "https://trello.com/b/MFpA78av/new-protecc-tower-defense",
             documentation: "http://drive.google.com",
             url: "http://snap.berkeley.edu"
           },
@@ -124,7 +124,7 @@
           { 
             team: ["Merlin Mörth", "Emanuel Moosbrugger"],
             topic: "ojojoj",
-            trello: "http://trello.com",
+            trello: "https://trello.com/b/Eoqoo1xf/pong",
             documentation: "http://drive.google.com",
             url: "http://snap.berkeley.edu"
           }
