--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             team: ["Merlin Mörth", "Emanuel Moosbrugger"],
             topic: "ojojoj",
             trello: "https://trello.com/b/Eoqoo1xf/pong",
-            documentation: "http://drive.google.com",
+            documentation: "https://docs.google.com/document/d/1MMxQx1MafkUtShZq6O_X7gkFJeWoxgdMm4fK4Kfe7dk/edit?usp=sharing",
             url: "http://snap.berkeley.edu"
           }
           ]
