--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             topic: "ojojoj",
             trello: "https://trello.com/b/MFpA78av/new-protecc-tower-defense",
             documentation: "http://drive.google.com",
-            url: "http://snap.berkeley.edu"
+            url: "http://snap.berkeley.edu/snapsource/snap.html#present:Username=lucaborg&ProjectName=drogendeal%20leicht%20gemacht"
           },
           { 
             team: ["Valentin Rüscher", "Oliver Meier"],
