--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             topic: "ojojoj",
             trello: "https://trello.com/b/Eoqoo1xf/pong",
             documentation: "https://docs.google.com/document/d/1MMxQx1MafkUtShZq6O_X7gkFJeWoxgdMm4fK4Kfe7dk/edit?usp=sharing",
-            url: "http://snap.berkeley.edu"
+            url: "https://snap.berkeley.edu/snapsource/snap.html#present:Username=martinfebras&ProjectName=Pong%3F"
           }
           ]
         
