--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             topic: "Der hungrige Willie",
             trello: "https://trello.com/invite/b/9rSq0i10/b2b713f026066079ea304e1e33234766/snap-spiel",
             documentation: "https://docs.google.com/document/d/1-qz1OzV04C-jUddybxe7qrf8hrQi-ltQ0cl5RPU5_Vg/edit?usp=sharing",
-            url: "http://snap.berkeley.edu"
+            url: "https://snap.berkeley.edu/snapsource/snap.html#present:Username=olivermeier&ProjectName=Willie%20Projekt"
           },
           { 
             team: ["Merlin Mörth", "Emanuel Moosbrugger"],
