--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             team: ["Luca Lutz", "Sandro Lipburger"],
             topic: "ojojoj",
             trello: "https://trello.com/b/MFpA78av/new-protecc-tower-defense",
-            documentation: "http://drive.google.com",
+            documentation: "https://docs.google.com/document/d/1U3shGSHjuj2mCS9GbWNgX8n4aYYuD4MaVahzuAt2a8w/edit?usp=sharing",
             url: "http://snap.berkeley.edu/snapsource/snap.html#present:Username=lucaborg&ProjectName=drogendeal%20leicht%20gemacht"
           },
           { 
