--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             topic: "Sneaky Snake",
             trello: "https://trello.com/b/w7B6h0zm/sneaky-snake",
             documentation: "https://docs.google.com/document/d/1Z62E2T8bdehSUyoMRQd4jYDJwquRUDcTgFdqS8A6z4g/edit?usp=sharing",
-            url: "http://snap.berkeley.edu"
+            url: "http://snap.berkeley.edu/snapsource/snap.html#present:Username=valentin%20aminakoyim&ProjectName=schlangen%20spiel"
           },
           { 
             team: ["Maximilian Sieber"],
