--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             topic: "Falling Fruits",
             trello: "http://trello.com",
             documentation: "https://docs.google.com/document/d/1fHaHzJkLx6NnZJI1i9r6mqq_pVeh4n6t_maqjKwYmuw/edit?usp=sharing",
-            url: "http://snap.berkeley.edu"
+            url: "https://snap.berkeley.edu/snapsource/snap.html#present:Username=maximilianborg&ProjectName=Mein%20Projekt%20f%C3%BCr%20info"
           },
           { 
             team: ["Luca Lutz", "Sandro Lipburger"],
