--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
               </p>
             </div>
             <p>
-              <a class="btn btn-success" href="{{url}}" role="button">Go to project »</a>
+              <a class="btn btn-success" href="https://snap.berkeley.edu/snapsource/snap.html{{url}}" role="button">Snap</a>
+              <a class="btn btn-success" href="cs10.org/snap/snap.html{{url}}" role="button">Mirror</a>
               <a class="btn btn-info" href="{{trello}}" role="button">Trello »</a>
               <a class="btn btn-secondary" href="{{documentation}}" role="button">View documentation »</a>              
             </p>
@@ -91,42 +92,42 @@
             topic: "Click and Point",
             trello: "https://trello.com/invite/b/peJIiv3z/d15a70835c20848d94c1d0040af51a0a/projekt-informatik",
             documentation: "https://docs.google.com/document/d/1t6t82yCbweVj79bskq51E7wGhSQpL1tysxa6Wuv3P7Y/edit?usp=sharing",
-            url: "https://snap.berkeley.edu/snapsource/snap.html#present:Username=queen&ProjectName=project%20informatik"
+            url: "#present:Username=queen&ProjectName=project%20informatik"
           },
           { 
             team: ["Julia Lerchenmüller", "Lukas Moosbrugger"],
             topic: "Sneaky Snake",
             trello: "https://trello.com/b/w7B6h0zm/sneaky-snake",
             documentation: "https://docs.google.com/document/d/1Z62E2T8bdehSUyoMRQd4jYDJwquRUDcTgFdqS8A6z4g/edit?usp=sharing",
-            url: "http://snap.berkeley.edu/snapsource/snap.html#present:Username=valentin%20aminakoyim&ProjectName=schlangen%20spiel"
+            url: "#present:Username=valentin%20aminakoyim&ProjectName=schlangen%20spiel"
           },
           { 
             team: ["Maximilian Sieber"],
             topic: "Falling Fruits",
             trello: "http://trello.com",
             documentation: "https://docs.google.com/document/d/1fHaHzJkLx6NnZJI1i9r6mqq_pVeh4n6t_maqjKwYmuw/edit?usp=sharing",
-            url: "https://snap.berkeley.edu/snapsource/snap.html#present:Username=maximilianborg&ProjectName=Mein%20Projekt%20f%C3%BCr%20info"
+            url: "#present:Username=maximilianborg&ProjectName=Mein%20Projekt%20f%C3%BCr%20info"
           },
           { 
             team: ["Luca Lutz", "Sandro Lipburger"],
             topic: "ojojoj",
             trello: "https://trello.com/b/MFpA78av/new-protecc-tower-defense",
             documentation: "https://docs.google.com/document/d/1U3shGSHjuj2mCS9GbWNgX8n4aYYuD4MaVahzuAt2a8w/edit?usp=sharing",
-            url: "http://snap.berkeley.edu/snapsource/snap.html#present:Username=lucaborg&ProjectName=drogendeal%20leicht%20gemacht"
+            url: "#present:Username=lucaborg&ProjectName=drogendeal%20leicht%20gemacht"
           },
           { 
             team: ["Valentin Rüscher", "Oliver Meier"],
             topic: "Der hungrige Willie",
             trello: "https://trello.com/invite/b/9rSq0i10/b2b713f026066079ea304e1e33234766/snap-spiel",
             documentation: "https://docs.google.com/document/d/1-qz1OzV04C-jUddybxe7qrf8hrQi-ltQ0cl5RPU5_Vg/edit?usp=sharing",
-            url: "https://snap.berkeley.edu/snapsource/snap.html#present:Username=olivermeier&ProjectName=Willie%20Projekt"
+            url: "#present:Username=olivermeier&ProjectName=Willie%20Projekt"
           },
           { 
             team: ["Merlin Mörth", "Emanuel Moosbrugger"],
             topic: "ojojoj",
             trello: "https://trello.com/b/Eoqoo1xf/pong",
             documentation: "https://docs.google.com/document/d/1MMxQx1MafkUtShZq6O_X7gkFJeWoxgdMm4fK4Kfe7dk/edit?usp=sharing",
-            url: "https://snap.berkeley.edu/snapsource/snap.html#present:Username=martinfebras&ProjectName=Pong%3F"
+            url: "#present:Username=martinfebras&ProjectName=Pong%3F"
           }
           ]
         
