--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <p>
               <a class="btn btn-success" href="https://snap.berkeley.edu/snapsource/snap.html{{url}}" role="button">Snap</a>
-              <a class="btn btn-success" href="cs10.org/snap/snap.html{{url}}" role="button">Mirror</a>
+              <a class="btn btn-success" href="https://cs10.org/snap/snap.html{{url}}" role="button">Mirror</a>
               <a class="btn btn-info" href="{{trello}}" role="button">Trello »</a>
               <a class="btn btn-secondary" href="{{documentation}}" role="button">View documentation »</a>              
             </p>
