--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             topic: "Sneaky Snake",
             trello: "https://trello.com/b/w7B6h0zm/sneaky-snake",
             documentation: "https://docs.google.com/document/d/1Z62E2T8bdehSUyoMRQd4jYDJwquRUDcTgFdqS8A6z4g/edit?usp=sharing",
-            url: "#present:Username=valentin%20aminakoyim&ProjectName=schlangen%20spiel"
+            url: "#present:Username=julesborg&ProjectName=Sneaky%20Snake"
           },
           { 
             team: ["Maximilian Sieber"],
