--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           },
           { 
             team: ["Luca Lutz", "Sandro Lipburger"],
-            topic: "ojojoj",
+            topic: "Drogendeal leicht gemacht",
             trello: "https://trello.com/b/MFpA78av/new-protecc-tower-defense",
             documentation: "https://docs.google.com/document/d/1U3shGSHjuj2mCS9GbWNgX8n4aYYuD4MaVahzuAt2a8w/edit?usp=sharing",
             url: "#present:Username=lucaborg&ProjectName=drogendeal%20leicht%20gemacht"
@@ -124,7 +124,7 @@
           },
           { 
             team: ["Merlin Mörth", "Emanuel Moosbrugger"],
-            topic: "ojojoj",
+            topic: "Pong?!",
             trello: "https://trello.com/b/Eoqoo1xf/pong",
             documentation: "https://docs.google.com/document/d/1MMxQx1MafkUtShZq6O_X7gkFJeWoxgdMm4fK4Kfe7dk/edit?usp=sharing",
             url: "#present:Username=martinfebras&ProjectName=Pong%3F"
