--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             topic: "Click and Point",
             trello: "https://trello.com/invite/b/peJIiv3z/d15a70835c20848d94c1d0040af51a0a/projekt-informatik",
             documentation: "https://docs.google.com/document/d/1t6t82yCbweVj79bskq51E7wGhSQpL1tysxa6Wuv3P7Y/edit?usp=sharing",
-            url: "#present:Username=queen&ProjectName=project%20informatik"
+            url: "#present:Username=queen&ProjectName=project%20informatik03.04."
           },
           { 
             team: ["Julia Lerchenmüller", "Lukas Moosbrugger"],
